@@ -2,10 +2,12 @@ package api.models.comparison;
 
 import java.io.IOException;
 import java.io.InputStream;
+import java.math.BigDecimal;
 import java.util.*;
 
 public class ModelComparator {
-    private static final boolean DEBUG = false;  // переключить на true для отладки
+    static final boolean DEBUG = true;  // включи для отладки
+    private static final double MONEY_DELTA = 0.01;
 
     private final Properties properties = new Properties();
     private static ModelComparator instance;
@@ -46,12 +48,20 @@ public class ModelComparator {
     }
 
     /**
-     * Возвращает маппинг полей: requestField → responseField.
-     * Формат в properties: RequestClass=ResponseClass:field1=field2,field3=field4
+     * Возвращает маппинг полей: sourceField → targetField.
+     * Формат в properties: SourceClass → TargetClass: field1=field2,field3=field4
      */
-    public Map<String, String> getFieldMapping(Class<?> requestClass, Class<?> responseClass) {
-        String fullValue = properties.getProperty(requestClass.getSimpleName());
-        debug("Looking for: " + requestClass.getSimpleName() + " → found: " + fullValue);
+    public Map<String, String> getFieldMapping(Class<?> sourceClass, Class<?> targetClass) {
+        String key = sourceClass.getSimpleName() + " → " + targetClass.getSimpleName();
+        String fullValue = properties.getProperty(key);
+
+        debug("Looking for: " + key + " → found: " + fullValue);
+
+        if (fullValue == null) {
+            // Пробуем старый формат (без →)
+            fullValue = properties.getProperty(sourceClass.getSimpleName());
+            debug("Trying old format: " + sourceClass.getSimpleName() + " → found: " + fullValue);
+        }
 
         if (fullValue == null) {
             return Collections.emptyMap();
@@ -62,9 +72,9 @@ public class ModelComparator {
             return Collections.emptyMap();
         }
 
-        String expectedResponse = parts[0].trim();
-        if (!expectedResponse.equals(responseClass.getSimpleName())) {
-            debug("Response mismatch: expected " + expectedResponse + " but got " + responseClass.getSimpleName());
+        String expectedTarget = parts[0].trim();
+        if (!expectedTarget.equals(targetClass.getSimpleName())) {
+            debug("Target mismatch: expected " + expectedTarget + " but got " + targetClass.getSimpleName());
             return Collections.emptyMap();
         }
 
@@ -73,6 +83,9 @@ public class ModelComparator {
             String[] kv = pair.split("=");
             if (kv.length == 2) {
                 fieldMap.put(kv[0].trim(), kv[1].trim());
+            } else if (kv.length == 1 && !kv[0].trim().isEmpty()) {
+                // Если поля называются одинаково: field → field
+                fieldMap.put(kv[0].trim(), kv[0].trim());
             }
         }
         debug("Field mapping: " + fieldMap);
@@ -80,10 +93,58 @@ public class ModelComparator {
     }
 
     /**
-     * Поля, которые игнорируются при сравнении (например, пароль).
+     * Поля, которые игнорируются при сравнении
      */
-    public Set<String> getIgnoredFields(Class<?> requestClass, Class<?> responseClass) {
-        return Set.of("password");
+    public Set<String> getIgnoredFields(Class<?> sourceClass, Class<?> targetClass) {
+        String key = sourceClass.getSimpleName() + " → " + targetClass.getSimpleName() + ".ignore";
+        String value = properties.getProperty(key);
+
+        if (value == null || value.trim().isEmpty()) {
+            // Дефолтные игнорируемые поля
+            return Set.of("password");
+        }
+
+        return new HashSet<>(Arrays.asList(value.split("\\s*,\\s*")));
+    }
+
+    /**
+     * 🆕 Сравнение значений с поддержкой разных типов
+     */
+    public boolean compareValues(Object sourceValue, Object targetValue) {
+        if (sourceValue == null && targetValue == null) return true;
+        if (sourceValue == null || targetValue == null) return false;
+
+        // === Сравнение чисел (Double, BigDecimal, Integer, Long) ===
+        if (sourceValue instanceof Number && targetValue instanceof Number) {
+            double source = ((Number) sourceValue).doubleValue();
+            double target = ((Number) targetValue).doubleValue();
+
+            // Если оба числа — сравниваем с дельтой (для денег)
+            return Math.abs(source - target) < MONEY_DELTA;
+        }
+
+        // === Сравнение BigDecimal ===
+        if (sourceValue instanceof BigDecimal && targetValue instanceof BigDecimal) {
+            return ((BigDecimal) sourceValue).compareTo((BigDecimal) targetValue) == 0;
+        }
+
+        // === Сравнение BigDecimal и Number ===
+        if (sourceValue instanceof BigDecimal && targetValue instanceof Number) {
+            BigDecimal source = (BigDecimal) sourceValue;
+            BigDecimal target = BigDecimal.valueOf(((Number) targetValue).doubleValue())
+                    .setScale(2, java.math.RoundingMode.HALF_UP);
+            return source.compareTo(target) == 0;
+        }
+
+        if (sourceValue instanceof Number && targetValue instanceof BigDecimal) {
+            BigDecimal source = BigDecimal.valueOf(((Number) sourceValue).doubleValue())
+                    .setScale(2, java.math.RoundingMode.HALF_UP);
+            BigDecimal target = (BigDecimal) targetValue;
+            return source.compareTo(target) == 0;
+        }
+
+        // === Стандартное сравнение ===
+        return Objects.equals(sourceValue, targetValue);
     }
 
     private static void debug(String message) {
